# HADES_Hydra

./: Hades_Pid_NN.ipynb  LambdaSelectionTrainingPyTorch.ipynb  README.md  chan01.root  chan03.root  chan05.root  chan06.root  chan11.root  chan12.root  chan14.root  chan15.root  chan18.root  chan19.root  chan42.root  plot.C  s1.root  s2.root  s3.root
AI/: LambdaSelectionTrainingPyTorch.ipynb
Analysis/: README.md  analysis.C
DST/: Makefile  analysisDST.cc
DST/Hydra1/: README.md  analysisSimDst.cc  analysisSimDst.h  profile.sh
DST/params/: HMagnetPar.txt  HRich700DigiMapPar_HRich700RingFinderPar_stdCUTS.txt  HRich700DigiMapPar_HRich700RingFinderPar_stdCUTS.txt~  agagprop_spec_wall_emc_geom_ilse_21042017.txt  agagprop_spec_wall_geom_ilse_21042017.txt  all_pars_ag1650ag_21042017.txt~  all_pars_ag1650ag_21042017_fwdet.txt
Fitter/: .clang-format  FParticleCand.h  HFitter.h  Makefile  README.md  hfitter.cc  hfitter.h  hrefitcand.cc  hrefitcand.h
FitterTutorial/: ToyMCTutorial_1.C
HGeant/: README.md  menu.C  target_geom.txt
HGeant/geom_ppFwdet_450/: fwdet.geo  last.kumac  media.geo  rich700d.geo  sect.geo
JobSubmission/: README.md  analysisScript.sh  sendScript.sh  submitJob.sh  wrap.sh
Pluto/: Generate.C  README.md
SimDst/: Makefile  README.md  analysisDST.cc
SimDst/params/: HMagnetPar.txt~  HMdcTimeCut_apr12_21042017.txt  HMdcTimeCut_apr12_21042017.txt~  agagprop_spec_geom_ilse_21042017.txt  all_pars_ag1650ag_14022018_fwdet.txt  all_pars_ag1650ag_21042017.txt  all_pars_ag1650ag_21042017_fwdet.txt  all_pars_ag1650ag_26032018_fwdet.txt  all_pars_ag1650ag_26032018_fwdet_3.txt  all_pars_ag1650ag_26032018_fwdet_350.txt  all_pars_ag1650ag_26032018_fwdet_3_old.txt  all_pars_ag1650ag_26032018_fwdet_4.txt  all_pars_ag1650ag_26032018_fwdet_400.txt  all_pars_ag1650ag_26032018_fwdet_450.txt  all_pars_ag1650ag_26032018_fwdet_500.txt  all_pars_ag1650ag_36032018_fwdet.txt  emc_par_validimir_21042017.txt  emc_par_validimir_21042017.txt~  emcgeopar_14500.txt
TorchFitter/: CMakeLists.txt  HFitter.cxx  HFitter.h  HFitterLinkDef.h  HRefitCand.cxx  HRefitCand.h  HRefitCandLinkDef.h  HYDRAConfig.cmake  README.md  defall.sh
forHydra/: Analysis.cxx  Analysis.h  AnalysisLinkDef.h  CMakeLists.txt  model_cpp.pt
